# paperext

./: .gitignore  CLAUDE.md  README.md  config.ai4hcat.ini  config.mdl.ini  pyproject.toml
data/: categorized_domains.json  categorized_models.json
docs/: model-cost-analysis.md
llm_paper_extract/: stats.py
src/paperext/: backend_check.py  evaluate.py  merge_papers.py  paths.py  query.py  smoke_openai.py  utils.py
src/paperext/analysis/: frequency.py  rollup.py  workload.py
src/paperext/backends/: __init__.py  base.py  openai.py  vertexai.py
src/paperext/paperoni/: report.py  utils.py
src/paperext/structured_output/ai4hcat/: model_v1.py
src/paperext/structured_output/mdl/: convert.py  model.py  model_v4.py
tests/: test_backend_check.py  test_backends.py  test_paths.py  test_query.py  test_smoke_openai.py  test_utils.py
tests/analysis/: test_frequency.py  test_rollup.py  test_workload.py
tests/data/merged/: 2401.14487.yaml
tests/data/queries/v4/: 2401.14487_00.json  2402.04821_00.json
tests/structured_output/: test_structured_output.py
tests/structured_output/mdl/: test_convert.py
