[project]
name = "llm-paper-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eval-type-backport>=0.2.2",
    "instructor>=1.8.3",
    "levenshtein>=0.27.1",
    "mlcm>=0.0.1",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
]
